# FallingSandSimulator

./: CMakeLists.txt  CMakePresets.json  README.md
include/: grid.h  main.h  renderer.h  simulation.h  util.h
source/: grid.c  main.c  renderer.c  simulation.c  util.c
